--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ h3 + *, h4 + *, p + * {
         <p><b>2.</b> <u>Verify transfer</u> </p>
         <p><b></b> <u>API.payeer</u> </p>
    <p><b></b> <u>Prdictor Aviator is activated automatically</u> </p>
-        <p class="nowrap"><input type="text" value="" placeholder="#------" /><button class="test">Verify</button></p>
+        <p class="nowrap"><input type="text" value="" placeholder="#payeer-transfernumber" /><button class="test">Verify</button></p>
       </div>
       <div class="content step2">
         <h4>Step 2:Check successful!</h4>
