--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ button
         <p style="color:wheat;font-size:55px;text-align:center;">Pay and Verify!</p>
 
 <center>
-<p0>PAYEER WALLET; PRİCE ; $35</p0>
-<p id="p1">35</p>
+<p0>PAYEER WALLET; PRİCE ; $70</p0>
+<p id="p1">70</p>
   <p109>Payment Addres</p109>
 <p id="p2">P1054349435</p><br/>
 
@@ -399,7 +399,7 @@ h3 + *, h4 + *, p + * {
       </div>
       <div class="content step2">
         <h4>Step 2:Check successful!</h4>
-        <p>Payeer wallet  #transfer number id not found</p>
+        <p>70 usd payeer transfer number is wrong. complete the payment !</p>
         <p><button class="primary reset">Reset</button></p>
       </div>
       <div class="pop-tart">
